Edit code done lan 11

--- a/src/main/resources/static/css/admin/Select2.css
+++ b/src/main/resources/static/css/admin/Select2.css
@@ -48,3 +48,7 @@
 .combobox-dropdown option:hover {
     background-color: #f1f1f1;
 }
+
+.select2-container--default .select2-selection--multiple {
+    padding: 5px 0;
+}
