Edit code done lan 14

--- a/src/main/resources/templates/admin/client/IndexClient.html
+++ b/src/main/resources/templates/admin/client/IndexClient.html
@@ -85,13 +85,13 @@
                                                                                 <input type="radio"
                                                                                        name="gender"
                                                                                        value="true"
-                                                                                       th:text="Nam"
+                                                                                       th:text="Nam" style="width: 21px;"
                                                                                        checked>
                                                                             </label>&nbsp;
                                                                             <label>
                                                                                 <input type="radio"
                                                                                        name="gender"
-                                                                                       value="false"
+                                                                                       value="false" style="width: 21px;"
                                                                                        th:text="Nữ">
                                                                             </label>
                                                                         </div>
