Edit code done lần 15

--- a/src/main/resources/templates/admin/client/DetailClient.html
+++ b/src/main/resources/templates/admin/client/DetailClient.html
@@ -128,7 +128,7 @@
                                     <div class="card-body pb-2">
                                         <h6 class="form-label">Trạng thái tài khản</h6>
                                         <div class="form-group">
-                                            <select name="status" class="custom-select">
+                                            <select name="status" class="custom-select" id="statusAccount">
                                                 <option value="1" th:selected="${detailProfile.status == 1}">
                                                     Hoạt động
                                                 </option>
