--- a/src/main/resources/templates/admin/voucher/IndexVoucher.html
+++ b/src/main/resources/templates/admin/voucher/IndexVoucher.html
@@ -75,14 +75,14 @@
                                                             <div class="row">
                                                                 <div class="col-md-4">
                                                                     <div class="form-group">
-                                                                        <label class="form-label">Hìn thức
+                                                                        <label class="form-label">Hình thức
                                                                             phiếu giảm giá:</label>
                                                                         <select name="voucherFrom" class="form-select">
-                                                                            <option value="all" th:text="all"></option>
+                                                                            <option value="all" th:text="All"></option>
                                                                             <option value="offline"
-                                                                                    th:text="offline"></option>
+                                                                                    th:text="Offline"></option>
                                                                             <option value="online"
-                                                                                    th:text="online"></option>
+                                                                                    th:text="Online"></option>
                                                                         </select>
                                                                     </div>
                                                                 </div>
@@ -200,7 +200,7 @@
                                                 <th style="width: 97px;">Mã phiếu giảm giá</th>
                                                 <th style="width: 145px">Tên phiếu giảm giá</th>
                                                 <th style="width: 104px">Số lượng</th>
-                                                <th style="width: 111px">Gía trị giảm</th>
+                                                <th style="width: 111px">Giá trị giảm</th>
                                                 <th style="width: 104px">Hình thức</th>
                                                 <th style="width: 100px">Thuộc về</th>
                                                 <th style="width: 104px">Ngày bắt đầu</th>
