Edit code done lần 20

--- a/src/main/resources/templates/admin/Product/CreateProduct.html
+++ b/src/main/resources/templates/admin/Product/CreateProduct.html
@@ -29,7 +29,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <h4 class="font-weight-bold py-3 mb-4">
-                                    Create Product,
+                                    Tạo sản phẩm,
                                 </h4>
                                 <div style="height: 500px;">
                                     <div class="row">
