--- a/src/main/resources/templates/admin/staff/IndexStaff.html
+++ b/src/main/resources/templates/admin/staff/IndexStaff.html
@@ -168,7 +168,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h6>Danh sách tài khoản Manager</h6>
+                                        <h6>Danh sách tài khoản ADMIN</h6>
                                         <div class="table-responsive">
                                             <div class="header">
                                                 <table class="table table-striped">
@@ -317,7 +317,7 @@
                             <div class="card-body" style="height: 602px;">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h6>Danh sách tài khoản manager ngừng hoạt động</h6>
+                                        <h6>Danh sách tài khoản ADMIN ngừng hoạt động</h6>
                                         <div class="table-responsive">
                                             <div class="header">
                                                 <table class="table table-striped">
