Edit code done lần 23

--- a/src/main/resources/templates/admin/color/IndexColor.html
+++ b/src/main/resources/templates/admin/color/IndexColor.html
@@ -54,7 +54,7 @@
                                                             <div class="form-group">
                                                                 <label class="form-label"> Tên màu : </label>
                                                                 <input type="text" class="form-control" name="nameColor"
-                                                                       placeholder="Enter Name Color">
+                                                                       placeholder="Nhập tên màu sắc">
                                                                 <span style="font-size: 13px;">Nếu thêm thuộc tính màu sắc thì bạn chỉ cần thêm tên mà không cần thêm từ "màu" (ví dụ: "Màu đỏ" chỉ cần thêm "Đỏ")</span>
                                                             </div>
                                                         </div>
