--- a/src/main/resources/templates/admin/size/IndexSize.html
+++ b/src/main/resources/templates/admin/size/IndexSize.html
@@ -53,7 +53,7 @@
                                                             <div class="form-group">
                                                                 <label class="form-label"> Tên kích cỡ : </label>
                                                                 <input type="text" class="form-control" name="nameSize"
-                                                                       placeholder="Enter Name Size">
+                                                                       placeholder="Nhập tên kích cỡ">
                                                                 <span style="font-size: 15px;">Nếu thêm thuộc tính kích cỡ thì chỉ cần thêm tên mà không thêm từ "size" (ví dụ: "Size M", chỉ cần thêm "M")</span>
                                                             </div>
                                                         </div>
