Edit code done lần 24

--- a/src/main/resources/templates/admin/IndexStaff.html
+++ b/src/main/resources/templates/admin/IndexStaff.html
@@ -3,9 +3,9 @@
     <main class="chartStaffPage fitterByDatePage">
         <div class="d-flex">
             <p style="width: 120px; margin: 8px;">Tìm kiếm theo ngày: </p>
-            <input type="date" name="startDate" id="startDate" class="form-control" style="width: 150px;">
+            <input type="date" name="startDate" id="startDate" class="form-control" style="width: 150px; height: 33px; margin-top: -2px;">
             <p style="width: 25px; margin: 8px;"> Đến </p>
-            <input type="date" name="endDate" id="endDate" class="form-control me-2" style="width: 150px;">
+            <input type="date" name="endDate" id="endDate" class="form-control me-2" style="width: 150px; height: 33px; margin-top: -2px;">
             <a type="button" class="btn btn-primary ms-2" th:href="@{/mangostore/admin/home}" style="padding: 5px 10px;font-size: 12px;line-height: 1.5;">Làm mới</a>
         </div>
         <div class="row">
