--- a/src/main/resources/templates/admin/ProductDetail/CreateProductDetail.html
+++ b/src/main/resources/templates/admin/ProductDetail/CreateProductDetail.html
@@ -124,7 +124,7 @@
                                                             <label class="form-label">Mô tả:</label>
                                                             <textarea class="form-control" name="describe"
                                                                       id="describeInput"
-                                                                      placeholder="Enter Describe"></textarea>
+                                                                      placeholder="Mô tả sản phẩm"></textarea>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -183,7 +183,7 @@
                                         <table class="table table-striped">
                                             <thead>
                                             <tr>
-                                                <th style="width: 30px">#</th>
+                                                <th style="width: 50px">#</th>
                                                 <th style="width: 122px">Ảnh sản phẩm</th>
                                                 <th style="width: 115px">Tên sản phẩm</th>
                                                 <th style="width: 70px">Chất liệu</th>
@@ -199,7 +199,7 @@
                                         <table class="table table-hover">
                                             <tbody>
                                             <tr th:each="listProductDetailInactive, stat : ${listProductDetailInactive}">
-                                                <td style="width: 30px" th:text="${stat.count}"></td>
+                                                <td style="width: 50px" th:text="${stat.count}"></td>
                                                 <td style="width: 122px"><img
                                                         th:src="@{|/images/product/${listProductDetailInactive.product.images.imagesFile}|}"
                                                         alt="image" style="width: 116px; height: 132px">
