--- a/src/main/resources/templates/admin/ProductDetail/EditProductDetail.html
+++ b/src/main/resources/templates/admin/ProductDetail/EditProductDetail.html
@@ -130,7 +130,7 @@
                                                                     tả</label>
                                                                 <textarea id="describeInput" name="describe"
                                                                           class="form-control"
-                                                                          th:field="*{describe}"></textarea>
+                                                                          th:field="*{describe}" placeholder="Mô tả sản phẩm"></textarea>
                                                             </div>
                                                         </div>
                                                         <div class="col-md-12">
@@ -206,7 +206,7 @@
                                         <table class="table table-striped">
                                             <thead>
                                             <tr>
-                                                <th style="width: 30px">#</th>
+                                                <th style="width: 50px">#</th>
                                                 <th style="width: 122px">Ảnh sản phẩm</th>
                                                 <th style="width: 115px">Tên sản phẩm</th>
                                                 <th style="width: 70px">Chất liệu</th>
@@ -222,7 +222,7 @@
                                         <table class="table table-hover">
                                             <tbody>
                                             <tr th:each="listProductDetailInactive, stat : ${listProductDetailInactive}">
-                                                <td style="width: 30px" th:text="${stat.count}"></td>
+                                                <td style="width: 50px" th:text="${stat.count}"></td>
                                                 <td style="width: 115px; word-break: break-all"
                                                     th:text="${listProductDetailInactive.product.nameProduct + '(' + listProductDetailInactive.size.nameSize + ', ' + listProductDetailInactive.color.nameColor + ')'}"></td>
                                                 <td style="width: 70px"
