--- a/src/main/resources/templates/admin/authentication/DetailAuthentication.html
+++ b/src/main/resources/templates/admin/authentication/DetailAuthentication.html
@@ -38,7 +38,7 @@
                             </div>
                             <div class="form-group">
                                 <label class="form-label">Tên quyền:</label>
-                                <select name="role" class="form-control" id="roleValue">
+                                <select name="role" class="form-select" id="roleValue">
                                     <option th:each="listRole : ${listRole}"
                                             th:value="${listRole.id}"
                                             th:text="${listRole.name}"
