Edit code done lần 27

--- a/src/main/resources/templates/admin/Sell/DetailInvoiceSell.html
+++ b/src/main/resources/templates/admin/Sell/DetailInvoiceSell.html
@@ -92,7 +92,7 @@
                                     </th:block>
                                     <th:block th:if="${detailInvoice.voucher == null}">
                                         <label>
-                                            <input type="text" class="form-control" value="Không có sử dụng voucher"
+                                            <input type="text" class="form-control" value="Không có sử dụng phiếu giảm giá"
                                                    style="width: 665px; height: 47px;" readonly>
                                         </label>
                                     </th:block>
