--- a/src/main/resources/templates/admin/Sell/DetailInvoiceSell.html
+++ b/src/main/resources/templates/admin/Sell/DetailInvoiceSell.html
@@ -92,7 +92,8 @@
                                     </th:block>
                                     <th:block th:if="${detailInvoice.voucher == null}">
                                         <label>
-                                            <input type="text" class="form-control" value="Không có sử dụng phiếu giảm giá"
+                                            <input type="text" class="form-control"
+                                                   value="Không có sử dụng phiếu giảm giá"
                                                    style="width: 665px; height: 47px;" readonly>
                                         </label>
                                     </th:block>
@@ -235,7 +236,8 @@
                                 </th:block>
                             </div>
                             <div class="form-group" style="display: flex; align-items: center;">
-                                <label class="control-label col-sm-5" style="margin: 0;">Voucher:</label>
+                                <label class="control-label col-sm-5" style="margin: 0;">Số tiền giảm qua phiếu giảm
+                                    giá: </label>
                                 <th:block th:if="${detailInvoice.voucher != null}">
                                     <div class="col-sm-7" style="margin: 0;">
                                         <p class="form-control-static"
@@ -331,13 +333,13 @@
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title">Danh sách Voucher</h4>
+                        <h4 class="modal-title">Danh sách phiếu giảm giá đang có</h4>
                         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                     </div>
                     <div class="modal-body">
                         <input type="hidden" id="idInvoiceInput" name="id" th:value="${detailInvoice.id}">
                         <div th:if="${listVoucherClient.empty}">
-                            <h5>Không có voucher</h5>
+                            <h5>Không có phiếu giảm giá nào</h5>
                         </div>
                         <div th:unless="${listVoucherClient.empty}">
                             <h5>Danh sách Voucher</h5>
@@ -396,7 +398,7 @@
                             <input type="hidden" id="totalInvoiceAmount" th:value="${detailInvoice.totalInvoiceAmount}">
                             <div class="form-group me-2">
                                 <input type="text" class="form-control" id="codeVoucherInput"
-                                       placeholder="Vui lòng nhập mã voucher" style="width: 347px;">
+                                       placeholder="Vui lòng nhập mã phiếu giảm giá" style="width: 347px;">
                             </div>
                             <button type="button" class="btn btn-success"
                                     onclick="updateVoucherForSell()">Áp dụng
