Edit code done lần 30

--- a/src/main/resources/templates/admin/Order/OrderList.html
+++ b/src/main/resources/templates/admin/Order/OrderList.html
@@ -18,7 +18,7 @@
                             </div>
                         </form>
                     </div>
-                    <h4 class="card-title">Danh sach hóa đơn</h4>
+                    <h4 class="card-title">Danh sách hóa đơn</h4>
                     <div class="table-responsive">
                         <div class="header">
                             <table class="table table-striped">
