--- a/src/main/resources/templates/admin/Order/IndexOrderShow.html
+++ b/src/main/resources/templates/admin/Order/IndexOrderShow.html
@@ -9,7 +9,7 @@
         <div class="col-lg-12 grid-margin stretch-card">
             <div class="card">
                 <div class="card-body">
-                    <h4 class="card-title">Danh sach hóa đơn chờ xác nhận</h4>
+                    <h4 class="card-title">Danh sách hóa đơn chờ xác nhận</h4>
                     <div class="table-responsive">
                         <div class="header">
                             <table class="table table-striped">
